--- a/index.html
+++ b/index.html
@@ -4,19 +4,11 @@
   <link rel="stylesheet" href="style.css">
   <nav>
     <ul>
-      <a href="#">About</a>
-      <a href="#">Maps</a>
-      <a href="#">History</a>
-      <a href="#">Further Reading</a>
+      <a href="https://dandi-m.github.io/DH201/about">About</a>
+      <a href="https://dandi-m.github.io/DH201/maps">Maps</a>
+      <a href="https://dandi-m.github.io/DH201/history">History</a>
+      <a href="https://dandi-m.github.io/DH201/further">Further Reading</a>
     </ul>
-<!--<ul class="sub-menu">
-	<li id="menu-item--1" class="mobile-parent-nav-menu-item menu-item--1"><button class="menu-item-link-return" tabindex="-1"><svg class="svg-icon" width="24" height="24" aria-hidden="true" role="img" focusable="false" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>Final Project</button></li>
-	<li id="menu-item-55" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-55"><a href="http://miriamposner.com/classes/dh201w19/final-project/assignment/">Assignment</a></li>
-	<li id="menu-item-18" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-18"><a href="http://miriamposner.com/classes/dh201w19/final-project/datasets/">Datasets</a></li>
-	<li id="menu-item-200" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-200"><a href="http://miriamposner.com/classes/dh201w19/final-project/milestones/">Milestones</a></li>
-	<li id="menu-item-231" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-231"><a href="http://miriamposner.com/classes/dh201w19/final-project/rubric/">Rubric</a></li>
-	<li id="menu-item-19" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-19"><a href="http://miriamposner.com/classes/dh201w19/final-project/building-your-project-site/">Building your project site</a></li> -->
-</ul>
   </nav>
 </head>
 <body>
