--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="style.css">
   <nav>
     <ul>
-      <a href="https://dandi-m.github.io/DH201/about">About</a>
+      <a href="pages/about.html">About</a>
       <a href="https://dandi-m.github.io/DH201/maps">Maps</a>
       <a href="https://dandi-m.github.io/DH201/history">History</a>
       <a href="https://dandi-m.github.io/DH201/further">Further Reading</a>
