--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html?>
 <html>
 <head>
-  <link rel="stylesheet" href="DH201style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <p1>test</p1>
