--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <h1><strong>Eastern State Penitentiary</strong></h1>
 
-  <p><strong>DH 201</strong></p>
+  <p><strong>DH 201 // Winter 2019</strong></p>
 
   <p>Dandi Meng</p>
 
