--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <link rel="stylesheet" href="style.css">
   <nav>
     <ul>
-      <a href="https://dandi-m.github.io/DH201/about">About</a>
-      <a href="https://dandi-m.github.io/DH201/maps">Maps</a>
-      <a href="https://dandi-m.github.io/DH201/history">History</a>
-      <a href="https://dandi-m.github.io/DH201/further">Further Reading</a>
+      <a href="https://dandi-m.github.io/dh201/about">About</a>
+      <a href="https://dandi-m.github.io/dh201/maps">Maps</a>
+      <a href="https://dandi-m.github.io/dh201/history">History</a>
+      <a href="https://dandi-m.github.io/dh201/further">Further Reading</a>
     </ul>
   </nav>
 </head>
