--- a/maps.html
+++ b/maps.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Maps</h1>
+  <h1>Maps</h1>
+  <p>[a map of places where inmates were arrested; maybe juxtaposed with architectural design of this vs. other penitentiaries--different ways of looking from a bird's eye view, some comments about competing prison designs (Pennsylvania system vs Auburn system)]</p>
 </body>
 </html>
