--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
       <a href="https://dandi-m.github.io/dh201/about">About</a>
       <a href="https://dandi-m.github.io/dh201/maps">Maps</a>
       <a href="https://dandi-m.github.io/dh201/history">History</a>
+      <a href="https://dandi-m.github.io/dh201/who">Inmates</a>
       <a href="https://dandi-m.github.io/dh201/further">Further Reading</a>
     </ul>
   </nav>
 </head>
 <body>
 
-  <h1><strong>Eastern State Penitentiary</strong></h1>
+  <h1><strong>"Tells an uncommonly straight plain story": Dispatches from the Eastern State Penitentiary, 1839-1850</strong></h1>
 
   <p><strong>DH 201 // Winter 2019</strong></p>
 
