--- a/further.html
+++ b/further.html
@@ -5,5 +5,9 @@
 </head>
 <body>
 <h1>Further Reading</h1>
+  <p><a href="https://search.amphilsoc.org/collections/view?docId=ead/Mss.365.P381p-ead.xml#top">American Philosophical Society records</a></p>
+  <p><a href="https://github.com/AmericanPhilosophicalSociety/Historic-Prison-Data">American Philosophical Society GitHub</a></p>
+  <p><a href=https://diglib.amphilsoc.org/labs/eastern-apps/>"Eastern Apps: Visualizing Historic Prison Data"</a></p>
+  <p>more later, plus description of ones above</p>
 </body>
 </html>
