--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <a href="https://dandi-m.github.io/dh201/about">About</a>
       <a href="https://dandi-m.github.io/dh201/maps">Maps</a>
       <a href="https://dandi-m.github.io/dh201/history">History</a>
-      <a href="https://dandi-m.github.io/dh201/who">Inmates</a>
+      <a href="https://dandi-m.github.io/dh201/inmates">Inmates</a>
       <a href="https://dandi-m.github.io/dh201/further">Further Reading</a>
     </ul>
   </nav>
