--- a/further.html
+++ b/further.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <form>
+   <input type="button" value="Back" onclick="history.back()">
+  </form>
 </head>
 <body>
 <h1>Further Reading</h1>
