--- a/inmates.html
+++ b/inmates.html
@@ -3,11 +3,30 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <form>
-  <input type="button" value="Back" onclick="history.back()">
-</form>
+    <input type="button" value="Back" onclick="history.back()">
+  </form
+    
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdn.bootcss.com/typed.js/1.1.4/typed.min.js"></script
+    
 </head>
 <body>
   <h1>Who were the inmates?</h1>
   <p>visualizations here</p>
+  
+  <div class="container">
+	<span class="write"></span>
+</div>
+
+
+<script type="text/javascript">
+	$(function(){
+        $(".write").typed({
+            strings: ["Welcome to ItSolutionStuff.com!", "Thanks for visit"],
+            typeSpeed: 1,
+        });
+    });
+</script>
+
 </body>
 </html>
