--- a/inmates.html
+++ b/inmates.html
@@ -20,7 +20,7 @@
 
 
 <script type="text/javascript">
-	$(function){
+	$(function(){
         $(".write").typed({
             strings: ["Welcome to ItSolutionStuff.com!", "Thanks for visit"],
             typeSpeed: 1,
