--- a/inmates.html
+++ b/inmates.html
@@ -4,10 +4,17 @@
   <link rel="stylesheet" href="style.css">
   <form>
     <input type="button" value="Back" onclick="history.back()">
-  </form
+  </form>
+  <script src="typed.js">
 </head>
 <body>
   <h1>Who were the inmates?</h1>
   <p>visualizations here</p>
+
+  var typed = new Typed('.element', {
+  strings: ["First sentence.", "Second sentence."],
+  typeSpeed: 30
+});
+    
 </body>
 </html>
