--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
       <a href="https://dandi-m.github.io/dh201/further">Further Reading</a>
     </ul>
   </nav>
+  
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://github.com/dandi-m/dh201/typed.min.js" type="text/javascript"></script>
+
+    <script>
+      $(function(){
+          $(".element").typed({
+            strings: ["App Shah...", " an Engineer (MS)...","a WordPress Lover...", "a Java Developer..."],
+            typeSpeed:100,
+            backDelay:3000,
+            loop:true
+          });
+      });
+    </script>
+  
 </head>
 <body>
 
