--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </nav>
   
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script src="typed.min.js" type="text/javascript"></script>
+    <script src="typed.js" type="text/javascript"></script>
 
     <script>
       $(function(){
