--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     </ul>
   </nav>
   
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script src="typed.js" type="text/javascript"></script>
-
+    <script src="typed.js"></script>
     <script>
       $(function(){
           $(".element").typed({
