--- a/index.html
+++ b/index.html
@@ -11,19 +11,6 @@
       <a href="https://dandi-m.github.io/dh201/further">Further Reading</a>
     </ul>
   </nav>
-  
-    <script src="typed.js"></script>
-    <script>
-      $(function(){
-          $(".element").typed({
-            strings: ["App Shah...", " an Engineer (MS)...","a WordPress Lover...", "a Java Developer..."],
-            typeSpeed:100,
-            backDelay:3000,
-            loop:true
-          });
-      });
-    </script>
-  
 </head>
 <body>
 
@@ -33,7 +20,15 @@
 
   <p>Dandi Meng</p>
 
+  <script type="text/javascript" src="typed.js"></script>
+  <script>
+    var typed = new Typed('.element', {
+      strings: ["First sentence.", "Second sentence."],
+      typeSpeed: 30
+    });
+  </script>
+
   <img src="espillustration.jpg" alt="A drawing of the Eastern State Penitentiary">
 
   </body>
-</html>
+</html
