--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <p><strong>DH 201 // Winter 2019</strong></p>
 
   <p>Dandi Meng</p>
+  
+  <p class="element"></p>
+  
+  <p id="element"></p>
 
   <script type="text/javascript" src="typed.js"></script>
   <script>
