--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <p>Dandi Meng</p>
     
-  <p id="element"></p>
+  <p class="element"></p>
 
   <script type="text/javascript" src="typed.js"></script>
   <script>
