--- a/inmates.html
+++ b/inmates.html
@@ -8,6 +8,18 @@
 </head>
 <body>
   <h1>Who were the inmates?</h1>
-  <p>visualizations here</p>  
+  
+  <p class="element"></p>
+    <script type="text/javascript" src="typed.js"></script>
+    <script>
+      var typed = new Typed('.element', {
+        strings: ["Professes to be turned to God", "Professes very great tenderness of feeling and great share of benevolence"," Professes conversion and gives very hopeful evidence of sincerity", "Professes conversion and gives very hopeful evidence of sincerity." ],
+        typeSpeed: 40,
+        backSpeed: 20,
+        smartBackspace: true,
+        loop: true
+      });
+    </script>
+  
 </body>
 </html>
