--- a/inmates.html
+++ b/inmates.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="typed.js"></script>
     <script>
         var typed = new Typed('.element', {
-        strings: [“Professed to hope in the mercy of God through our L.J.C.”, “Professes very great tenderness of feeling and great share of benevolence.”, “Professes religion.”],
+        strings: [“Professes religion.”, "Professes innocence."],
         typeSpeed: 40,
         backSpeed: 20,
         smartBackspace: true,
