--- a/inmates.html
+++ b/inmates.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="typed.js"></script>
     <script>
         var typed = new Typed('.element', {
-        strings: [“Professes religion.”, "Professes innocence."],
+        strings: ["Professes innocence.", "Professes religion."],
         typeSpeed: 40,
         backSpeed: 20,
         smartBackspace: true,
