--- a/inmates.html
+++ b/inmates.html
@@ -7,6 +7,11 @@
   </form>
 </head>
 <body>
+<style>
+  p {
+    font-size: 300%;
+    font-family: sans-serif;
+  }
   <h1>Who were the inmates?</h1>
   
   <p class="element"></p>
