--- a/inmates.html
+++ b/inmates.html
@@ -12,6 +12,7 @@
     font-size: 300%;
     font-family: sans-serif;
   }
+</style>
   <h1>Who were the inmates?</h1>
   
   <p class="element"></p>
