--- a/inmates.html
+++ b/inmates.html
@@ -23,6 +23,7 @@
         typeSpeed: 20,
         backSpeed: 20,
         smartBackspace: true,
+        shuffle: true,
         loop: true
       });
     </script>
