--- a/inmates.html
+++ b/inmates.html
@@ -9,8 +9,7 @@
 <body>
 <style>
   p {
-    font-size: 300%;
-    font-family: sans-serif;
+    font-size: 300%
   }
 </style>
   <h1>Who were the inmates?</h1>
