--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <a href="https://dandi-m.github.io/dh201/history">History</a>
       <a href="https://dandi-m.github.io/dh201/inmates">Who were the inmates?</a>
       <a href="https://dandi-m.github.io/dh201/further">Further Reading</a>
-      <a href="https://dandi-m.github.io/dh201/twintest">Game</a>
+      <a href="https://dandi-m.github.io/dh201/twinetest">Game</a>
     </ul>
   </nav>
 </head>
