--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <nav>
     <ul>
       <a href="https://dandi-m.github.io/dh201/about">About</a>
-      <a href="https://dandi-m.github.io/dh201/maps">Maps</a>
+      <a href="https://dandi-m.github.io/dh201/maptest">Maps</a>
       <a href="https://dandi-m.github.io/dh201/history">History</a>
       <a href="https://dandi-m.github.io/dh201/inmates">Who were the inmates?</a>
       <a href="https://dandi-m.github.io/dh201/further">Further Reading</a>
