--- a/maps.html
+++ b/maps.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <form>
-   <input type="button" value="Back" onclick="history.back()">
+   <input type="button" value="Back" onclick="https://dandi-m.github.io/dh201/">
   </form>
 </head>
 <body>
