--- a/maps.html
+++ b/maps.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-  <form>
-   <input type="button" value="Back" onclick="https://dandi-m.github.io/dh201/">
-  </form>
+<form>
+  <button onclick="window.location.href = 'https://dandi-m.github.io/dh201/';">Back</button>
+</form>
 </head>
 <body>
   <h1>Maps</h1>
