--- a/maps.html
+++ b/maps.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-<form>
-  <button onclick="window.location.href = 'https://dandi-m.github.io/dh201/';">Back</button>
+<form action="https://dandi-m.github.io/dh201" method="get" target="_blank">
+    <button type="submit">Back</button>
 </form>
 </head>
 <body>
