--- a/maps.html
+++ b/maps.html
@@ -2,9 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-<form action="https://dandi-m.github.io/dh201" method="get" target="_blank">
-    <button type="submit">Back</button>
-</form>
+<input type="button" onclick="location.href='https://dandi-m.github.io/dh201/';" value="Back" />
 </head>
 <body>
   <h1>Maps</h1>
