--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <ul>
       <a href="https://dandi-m.github.io/dh201/about">About</a>
       <a href="https://dandi-m.github.io/dh201/maptest">Maps</a>
-      <a href="https://dandi-m.github.io/dh201/history">History</a>
-      <a href="https://dandi-m.github.io/dh201/inmates">Who were the inmates?</a>
-      <a href="https://dandi-m.github.io/dh201/further">Further Reading</a>
+      <a href="https://dandi-m.github.io/dh201/inmates">Who were the prisoners?</a>
+      <a href="https://dandi-m.github.io/dh201/race">Racial Considerations</a>
+      <a href="https://dandi-m.github.io/dh201/further">Bibliography & Further Reading</a>
     </ul>
   </nav>
 </head>
