--- a/inmates.html
+++ b/inmates.html
@@ -40,5 +40,7 @@
     it depends on this server.
     Feel free to change the height and width values or other styling below: -->
     <iframe style='width: 301px; height: 161px;' src='//voyant-tools.org/tool/Cirrus/?view=Cirrus&visible=25&corpus=683d6e975d1dd6cb25a48e9cdd112c34'></iframe>
-</body>
+<br>
+    <iframe style='width: 498px; height: 441px;' src='//voyant-tools.org/tool/CollocatesGraph/?query=cause&mode=corpus&corpus=683d6e975d1dd6cb25a48e9cdd112c34'></iframe>
+  </body>
 </html>
