--- a/prisoners.html
+++ b/prisoners.html
@@ -12,7 +12,7 @@
     font-size: 300%
   }
 </style>
-  <h1>Who were the inmates?</h1>
+  <h1>Who were the prisoners?</h1>
   
   <p class="element"></p>
     <script type="text/javascript" src="typed.js"></script>
