--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="espillustration.jpg">
   <title>"Tells an uncommonly straight plain story": Dispatches from the Eastern State Penitentiary, 1830-1850</title>
   <nav>
     <ul>
