--- a/prisoners.html
+++ b/prisoners.html
@@ -7,12 +7,9 @@
   </form>
 </head>
 <body>
-  <style>
-    p {font-size: 300%}
-  </style>
     <h1>Who were the prisoners?</h1>
   
-    <p class="element"></p>
+    <p class="element" style="font-size:300%"></p>
       <script type="text/javascript" src="typed.js"></script>
       <script>
           var typed = new Typed('.element', {
