--- a/prisoners.html
+++ b/prisoners.html
@@ -23,7 +23,9 @@
       </script>
   
   <style>
-    p {font-size: 200%}
+    p {font-size: 200%;
+       padding: 40px;
+     }
   </style>
   
   <p>
