--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <p>Dandi Meng</p>
 
-  <img src="espillustration.jpg" alt="A drawing of the Eastern State Penitentiary">
+  <img src="espillustration.jpg" alt="A drawing of the Eastern State Penitentiary" style="position:relative";>
 
   </body>
 </html
