--- a/prisoners.html
+++ b/prisoners.html
@@ -54,6 +54,7 @@
 
   <p>
     <div class='tableauPlaceholder' id='viz1553203442673' style="width: 200%; position: relative; overflow: hidden; display: block; margin: 50px;"><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;8B&#47;8B73YD3FP&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;8B73YD3FP' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;8B&#47;8B73YD3FP&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1553203442673');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.minWidth='420px';vizElement.style.maxWidth='650px';vizElement.style.width='100%';vizElement.style.minHeight='587px';vizElement.style.maxHeight='887px';vizElement.style.height='100%';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <img src="topics.png">
   </p>
   
   <p>
@@ -80,15 +81,5 @@
     One conclusion to draw from the marked decrease in topic 22’s presence in the admissions descriptions might be that Larcombe became less preoccupied with the emotional state and behaviors of prisoners as time went on. However, if we look at topic 2, for example, we can see that topic 22 is just one of several topics where emotion words are grouped together into a topic. Though there are no exact overlaps (in terms of individual terms) between the two topics, many of the terms in topic 2 clearly pertain to the emotional life of the prisoners (“hardened,” “feeling,” “desire,” “taciturn”), though, it seems, in a more abstract sense than the terms in topic 22. If we were to classify topic 2 as a topic primarily driven by emotion, that emotion is described more in terms of prisoners’ tendencies and dispositions, rather than moods and particular instances of emotional behaviors. As such, we would have to revise our observation and say instead that Larcombe became less interested in prisoners’ specific emotional beehaviors while his interest in their general disposition remained relatively constant.
   </p>
   
-  <br>
-  <br>
-  <br>
-    <!--	Exported from Voyant Tools (voyant-tools.org).
-    The iframe src attribute below uses a relative protocol to better function with both
-    http and https sites, but if you're embedding this into a local web page (file protocol)
-    you should add an explicit protocol (https if you're using voyant-tools.org, otherwise
-    it depends on this server.
-    Feel free to change the height and width values or other styling below: -->
-    <iframe style='width: 498px; height: 441px;' src='//voyant-tools.org/tool/CollocatesGraph/?query=cause&mode=corpus&corpus=683d6e975d1dd6cb25a48e9cdd112c34'></iframe>
-</body>
+  </body>
 </html>
