--- a/prisoners.html
+++ b/prisoners.html
@@ -29,7 +29,7 @@
   </style>
   
   <p>
-    What initially drew me to this dataset were the descriptions of prisoners, ranging from a few short sentences to long, full paragraphs, written by Reverand Thomas Larcombe, the penitentiary’s “moral instructor” for the period in question. These descriptions have no pretense of objectivity--they are full of idiosyncratic details and veer from notes-to-self about the prisoners’ behaviors and personal history to paraphrases of the prisoners’ own speech.
+    What initially drew me to this dataset were the descriptions of prisoners, ranging from a few short sentences to long, full paragraphs, written by Reverend Thomas Larcombe, the penitentiary’s “moral instructor” for the period in question. These descriptions have no pretense of objectivity--they are full of idiosyncratic details and veer from notes-to-self about the prisoners’ behaviors and personal history to paraphrases of the prisoners’ own speech.
   </p>
   
   <p>
