--- a/race.html
+++ b/race.html
@@ -5,13 +5,20 @@
   <form>
    <input type="button" value="Back" onclick="history.back()">
   </form>
+  <title>Racial Considerations</title>
 </head>
 <body>
 <h1>Racial Considerations</h1>
 <p>
 <div class='tableauPlaceholder' id='viz1553293916700' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;8B&#47;8BBWF7JS4&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;8BBWF7JS4' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;8B&#47;8BBWF7JS4&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1553293916700');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.minWidth='1680px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='1174px';vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>  
 </p>
- 
+  
+  <style>
+    p {font-size: 200%;
+       margin: 50px;
+     }
+  </style>
+  
   <p>
     Extracting racial information about each of the prisoners represented in this data was a bit of a challenge, as I discuss in the “About” section, but race is a crucial component of making sense of the admissions data, especially since the timeframe of the data covers crucial antebellum years. The visualization of prisoner demographics confirms a largely unsurprising fact: there was a much higher percentage of black prisoners at Eastern State than the percentage of black residents in Pennsylvania overall. This observation makes a lot of sense if we think about Eastern State as one touchpoint in a long history of racialized mass incarceration, but there are some fascinating complicating factors behind these nubmers.
   </p>
