--- a/prisoners.html
+++ b/prisoners.html
@@ -5,6 +5,7 @@
   <form>
     <input type="button" value="Back" onclick="history.back()">
   </form>
+  <title>Who were the prisoners?</title>
 </head>
 <body>
     <h1>Who were the prisoners?</h1>
