--- a/sweetcell.html
+++ b/sweetcell.html
@@ -2,7 +2,7 @@
 <html data-init="no-js">
 <head>
 <meta charset="UTF-8" />
-<title>sweet cell</title>
+<title>Sweet Cell</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <!--
 
