--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
       <a href="https://dandi-m.github.io/dh201/about">About</a>
       <a href="https://dandi-m.github.io/dh201/prisoners">Who were the prisoners?</a>
-      <a href="https://dandi-m.github.io/dh201/maptest">Maps</a>
+      <a href="https://dandi-m.github.io/dh201/sweetcell">Maps</a>
       <a href="https://dandi-m.github.io/dh201/race">Racial Considerations</a>
       <a href="https://dandi-m.github.io/dh201/further">Bibliography & Further Reading</a>
     </ul>
