--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <form>
    <input type="button" value="Back" onclick="history.back()">
   </form>
+  <title>About</title>
 </head>
 <body>
   <h1>About</h1>
