--- a/maps.html
+++ b/maps.html
@@ -9,6 +9,12 @@
   
   <img src="ESPmap.jpg" alt="bird's eye view of ESP's layout" style="width:1000px;height:1000px;">
   
+  <style>
+    p {font-size: 200%;
+       margin: 50px;
+     }
+  </style>
+  
   <p>
     The process of getting to this set of more conventional maps was meant to be a disorienting one. Prisoners at Eastern State were purposefully given very little in the way of what we might call bird’s eye knowledge, since the entire basis of solitary confinement depended on prisoners having little to no contact with other prisoners and the outside world. Prisoners were hooded when first admitted and led to the their cell so they could not get sense of the prison’s layout, and each cell was soundproof and completely out of sight from other cells. All of the original cells included a small outdoors exercise yard sealed off from other cells and yards so that prisoners could spend time outside without being able to conspire with other prisoners, and hoods and blindfolds continued to be used to transport prisoners within the building.
   </p>
@@ -20,12 +26,12 @@
   <p>
     Prisoners would have had even less of a sense of the personal histories of their fellow prisoners, since even those who were arrested together or who knew each other outside of the prison would have no contact with each other whatsoever. Below is a map showing the counties where the prisoners were sentenced. This is the kind of view that would have been both literally and figuratively unavailable to prisoners, who were forbidden from finding companions and co-conspirators within their shared physical space, let alone from a shared past.
   </p>
-    
+   
+ <div class='tableauPlaceholder' id='viz1553339058839' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ea&#47;EasternStatePenitentiaryPrisonersSentencingCounty1830-1850&#47;Sheet1&#47;1_rss.png' style='border: 50px' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='EasternStatePenitentiaryPrisonersSentencingCounty1830-1850&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ea&#47;EasternStatePenitentiaryPrisonersSentencingCounty1830-1850&#47;Sheet1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1553339058839');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='75%';vizElement.style.height='75%';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+     
   <p>
     Note: The phrase “sweet cell of virtue” comes from Act 1 of Titus Andronicus. In the scene containing the phrase, Titus is lamenting the loss of his sons in battle and refers to a burial plot as that sweet cell. Aside from the obvious invocation of a prison cell, the phrase also feels appropriate to this project in its moralization and romanticization of the cell as a unit. 
   </p>
-  
- <div class='tableauPlaceholder' id='viz1553339058839' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ea&#47;EasternStatePenitentiaryPrisonersSentencingCounty1830-1850&#47;Sheet1&#47;1_rss.png' style='border: 50px' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='EasternStatePenitentiaryPrisonersSentencingCounty1830-1850&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ea&#47;EasternStatePenitentiaryPrisonersSentencingCounty1830-1850&#47;Sheet1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1553339058839');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='75%';vizElement.style.height='75%';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-  
+
   </body>
 </html>
