--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <a href="https://dandi-m.github.io/dh201/prisoners">Who were the prisoners?</a>
       <a href="https://dandi-m.github.io/dh201/sweetcell">Maps</a>
       <a href="https://dandi-m.github.io/dh201/race">Racial Considerations</a>
-      <a href="https://dandi-m.github.io/dh201/further">Bibliography & Further Reading</a>
+      <a href="https://dandi-m.github.io/dh201/bib">Bibliography</a>
     </ul>
   </nav>
 </head>
