--- a/bib.html
+++ b/bib.html
@@ -5,6 +5,7 @@
   <form>
    <input type="button" value="Back" onclick="history.back()">
   </form>
+  <title>Bibliography</title>
 </head>
 <body>
 <h1>Bibliography</h1>
