--- a/maps.html
+++ b/maps.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <title>Maps</title>
 <input type="button" onclick="location.href='https://dandi-m.github.io/dh201/';" value="Back" />
 </head>
 <body>
