--- a/bib.html
+++ b/bib.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 <h1>Bibliography</h1>
+  <style>
+    p {
+      margin:50px;
+    }
   <p>Brown, Elizabeth, and George Barganier. “Imprisoning Race: From Slavery to the Prison.” Race and Crime: Geographies of Injustice. University of California Press, 2018.</p>
   <p>Da, Nan Z. “The Computational Case Against Computational Literary Studies.” Critical Inquiry, vol. 45, 2019, pp. 601–39.</p> 
   <p>Eastern State Penitentiary: Historic Structures Report Volume I, Mary Ann Thomas Architects, 1994. https://www.easternstate.org/sites/easternstate/files/inline-files/history-vol1.pdf</p> 
